src-tauri/src/gcal_push/snapshots/agaric_lib__gcal_push__digest__tests__digest_minimal_mode.snap
---
source: src/gcal_push/digest.rs
expression: got
---
Create:
  summary: Agaric Agenda — Sat Apr 25
  description: ""
  start:
    date: 2026-04-25
  end:
    date: 2026-04-25
  transparency: transparent
