src-tauri/src/gcal_push/snapshots/agaric_lib__gcal_push__digest__tests__digest_mixed_state_day.snap
---
source: src/gcal_push/digest.rs
expression: got
---
Create:
  summary: Agaric Agenda — Thu Apr 23
  description: "[ ] Projects › Loose note\n[x] Projects › Ship v1.0\n[ ] Projects › Design review\n[—] Projects › Legacy migration\n[·] Projects › Writing spec"
  start:
    date: 2026-04-23
  end:
    date: 2026-04-23
  transparency: transparent
