src-tauri/src/gcal_push/snapshots/agaric_lib__gcal_push__digest__tests__digest_multi_page_day.snap
---
source: src/gcal_push/digest.rs
expression: got
---
Create:
  summary: Agaric Agenda — Sun Apr 26
  description: "[—] Inbox › Archive old emails\n[·] Reading List › Finish 'Designing Data-Intensive Applications'\n[ ] Personal › Grocery run\n[ ] Projects › Retro notes\n[x] Work › Standup"
  start:
    date: 2026-04-26
  end:
    date: 2026-04-26
  transparency: transparent
