src-tauri/src/gcal_push/snapshots/agaric_lib__gcal_push__digest__tests__digest_single_entry.snap
---
source: src/gcal_push/digest.rs
expression: got
---
Create:
  summary: Agaric Agenda — Wed Apr 22
  description: "[ ] Projects › Review PR #42"
  start:
    date: 2026-04-22
  end:
    date: 2026-04-22
  transparency: transparent
